# expenses-app

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 378d4e6aa994_create_users_expenses_refresh_tokens.py
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/models/: __init__.py  base.py  enums.py  expense.py  refresh_token.py  user.py
backend/src/routers/: auth.py  expense.py  user.py
backend/src/schemas/: __init__.py  auth.py  expense.py  user.py
backend/src/services/: __init__.py  auth.py  expense.py  user.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: auth.js  client.js  expenses.js  users.js
frontend/src/components/: Layout.jsx  ProtectedRoute.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: useAuth.js
frontend/src/pages/: MyExpenses.jsx  Profile.jsx  SignIn.jsx  SignUp.jsx  Statistics.jsx
infrastructure/: docker-compose.yml
